--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-linux": "electron-builder --linux"
   },
   "dependencies": {
+    "electron-prompt": "^1.7.0",
     "electron-store": "^10.1.0"
   },
   "devDependencies": {
