--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -7,6 +7,7 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
 
 jobs:
   build-and-release:
@@ -22,16 +23,17 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build AppImage
         run: |
-            npm run build-linux
-            chmod +x dist/lampa.AppImage
+          npm run build-linux
+          chmod +x dist/lampa.AppImage
 
-      - name: publish to github release
+      - name: Publish to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/lampa.AppImage
+          files: |
+            dist/lampa.AppImage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
