--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
-    "build-linux": "electron-builder --linux"
+    "build-linux": "electron-builder --linux --publish=never"
   },
   "dependencies": {
     "electron-prompt": "^1.7.0",
