feat: added path support to fs-existsSync
Signed-off-by: Boris Yumankulov <boria138@altlinux.org>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build-linux": "electron-builder --linux --publish=never"
   },
   "dependencies": {
-    "electron-store": "^10.1.0"
+    "electron-store": "^10.1.0",
+    "which": "^5.0.0"
   },
   "devDependencies": {
     "electron": "37.2.5",
