--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,4 +1,4 @@
-name: Build and Release AppImage
+name: Build and Release AppImage and macOS builds
 
 permissions:
   contents: write
@@ -10,14 +10,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-release:
+  build-linux:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Для полной истории репозитория
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -61,12 +60,55 @@ jobs:
             echo "EOF" >> $GITHUB_OUTPUT
           fi
 
+      - name: Upload Linux Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lampa-linux
+          path: dist/lampa-x86_64.AppImage
+
+  build-macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        arch: [x64, arm64]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build for macOS
+        run: |
+          npm run build-mac -- --${{ matrix.arch }}
+
+      - name: Upload macOS Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lampa-macos-${{ matrix.arch }}
+          path: dist/*.dmg
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-macos]
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+
       - name: Publish to GitHub Release
         uses: softprops/action-gh-release@v2
-        if: github.ref_type == 'tag'
         with:
-          body: ${{ steps.changelog.outputs.body }}
+          body: ${{ needs.build-linux.outputs.changelog }}
           files: |
-            dist/lampa.AppImage
+            lampa-linux/lampa.AppImage
+            lampa-macos-x64/*.dmg
+            lampa-macos-arm64/*.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
