--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": {
     "name": "Boris Yumankulov <boriabloger@protonmail.com>"
   },
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A media streaming application for movies and TV shows",
   "license": "MIT",
   "homepage": "https://github.com/Boria138/Lampa",
@@ -34,7 +34,9 @@
     "mac": {
       "category": "public.app-category.utilities",
       "icon": "assets/icon_mac.png",
-      "target": ["dmg"]
+      "target": [
+        "dmg"
+      ]
     },
     "publish": {
       "provider": "github",
