fix typo on appimage name
Signed-off-by: Boris Yumankulov <boria138@altlinux.org>

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build AppImage
         run: |
           npm run build-linux
-          chmod +x dist/lampa.AppImage
+          chmod +x dist/lampa-x86_64.AppImage
 
       - name: Extract version from tag
         id: get_version
