--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -36,29 +36,29 @@ jobs:
           npm run build-linux
           chmod +x dist/lampa-x86_64.AppImage
 
-      - name: Extract version from tag
-        id: get_version
-        run: |
-          if [[ "${{ github.ref }}" =~ ^refs/tags/v([0-9]+\.[0-9]+\.[0-9]+)$ ]]; then
-            echo "version=${BASH_REMATCH[1]}" >> $GITHUB_OUTPUT
-          else
-            echo "Invalid tag format: ${{ github.ref }}"
-            exit 1
-          fi
-
-      - name: Extract changelog for version
-        id: changelog
-        run: |
-          VERSION="${{ steps.get_version.outputs.version }}"
-          awk "/^## \\[$VERSION\\]/ {flag=1; next} /^## \\[/ {flag=0} flag" CHANGELOG.md > changelog.txt
-          if [ ! -s changelog.txt ]; then
-            echo "No changelog entries found for version $VERSION"
-            echo "body=No changelog entries found for version $VERSION" >> $GITHUB_OUTPUT
-          else
-            echo "body<<EOF" >> $GITHUB_OUTPUT
-            cat changelog.txt >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
-          fi
+      # - name: Extract version from tag
+      #   id: get_version
+      #   run: |
+      #     if [[ "${{ github.ref }}" =~ ^refs/tags/v([0-9]+\.[0-9]+\.[0-9]+)$ ]]; then
+      #       echo "version=${BASH_REMATCH[1]}" >> $GITHUB_OUTPUT
+      #     else
+      #       echo "Invalid tag format: ${{ github.ref }}"
+      #       exit 1
+      #     fi
+      #
+      # - name: Extract changelog for version
+      #   id: changelog
+      #   run: |
+      #     VERSION="${{ steps.get_version.outputs.version }}"
+      #     awk "/^## \\[$VERSION\\]/ {flag=1; next} /^## \\[/ {flag=0} flag" CHANGELOG.md > changelog.txt
+      #     if [ ! -s changelog.txt ]; then
+      #       echo "No changelog entries found for version $VERSION"
+      #       echo "body=No changelog entries found for version $VERSION" >> $GITHUB_OUTPUT
+      #     else
+      #       echo "body<<EOF" >> $GITHUB_OUTPUT
+      #       cat changelog.txt >> $GITHUB_OUTPUT
+      #       echo "EOF" >> $GITHUB_OUTPUT
+      #     fi
 
       - name: Upload Linux Artifact
         uses: actions/upload-artifact@v4
@@ -105,7 +105,7 @@ jobs:
       - name: Publish to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          body: ${{ needs.build-linux.outputs.changelog }}
+          # body: ${{ needs.build-linux.outputs.changelog }}
           files: |
             lampa-linux/lampa.AppImage
             lampa-macos-x64/*.dmg
