temporary hardcode tag
Signed-off-by: Boris Yumankulov <boria138@altlinux.org>

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -106,6 +106,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           # body: ${{ needs.build-linux.outputs.changelog }}
+          tag_name: "v1.2.0"
           files: |
             lampa-linux/lampa.AppImage
             lampa-macos-x64/*.dmg
