fix appimage release
Signed-off-by: Boris Yumankulov <boria138@altlinux.org>

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -108,7 +108,7 @@ jobs:
           # body: ${{ needs.build-linux.outputs.changelog }}
           tag_name: "v1.2.0"
           files: |
-            lampa-linux/lampa.AppImage
+            lampa-linux/lampa-x86_64.AppImage
             lampa-macos-x64/*.dmg
             lampa-macos-arm64/*.dmg
         env:
