--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -68,9 +68,6 @@ jobs:
 
   build-macos:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        arch: [x64, arm64]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,7 +84,7 @@ jobs:
 
       - name: Build for macOS
         run: |
-          npm run build-mac -- --${{ matrix.arch }}
+          npm run build-mac
 
       - name: Upload macOS Artifact
         uses: actions/upload-artifact@v4
