--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "electron .",
     "dev": "electron . --dev",
     "build-linux": "electron-builder --linux --publish=never",
-    "build-mac": "electron-builder --mac --publish=never"
+    "build-mac": "electron-builder --mac --x64 --arm64 --publish=never"
   },
   "dependencies": {
     "electron-store": "^10.1.0",
